[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/sheep/sprites/oveja topdown.png" type="Texture" id=1]
[ext_resource path="res://characters/sheep/scripts/Sheep.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.5, 46.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 7.5 )

[sub_resource type="RectangleShape2D" id=5]

[node name="Sheep" type="KinematicBody2D" groups=["sheep"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
speed = 64.0

[node name="Sprite2D" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="DogDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DogDetector"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 3 )

[node name="MoveDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDetector"]
position = Vector2( -1.5, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.43

[node name="SheepDetector" type="Area2D" parent="."]
position = Vector2( 32, 0 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SheepDetector"]
shape = SubResource( 5 )

[connection signal="body_entered" from="DogDetector" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DogDetector" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="MoveDetector" to="." method="_on_MoveDetector_area_entered"]
[connection signal="body_entered" from="MoveDetector" to="." method="_on_MoveDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="follow_path"]
[connection signal="body_entered" from="SheepDetector" to="." method="_on_SheepDetector_body_entered"]
